fix content alignment in Honduras post

--- a/assets/css/standard.css
+++ b/assets/css/standard.css
@@ -335,5 +335,6 @@ iframe
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 96%;
 }
 
